--- a/sections/about-mission.liquid
+++ b/sections/about-mission.liquid
@@ -77,6 +77,7 @@
             <i class="bi {{ block.settings.icon }} mission-icon"></i>
             <h3>{{ block.settings.title }}</h3>
             <p>{{ block.settings.description }}</p>
+            <p>Test P</p>
           </div>
         </div>
       {% endfor %}
